fix_Header_Z-index

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ font-family: 'Ubuntu', sans-serif;
 header{
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 100px;
     background-color: white;
